
- #9393: Improve recursive module usage warnings
  (Leo White, review by Thomas Refis)

- #2141: generate .annot files from cmt data; deprecate -annot.
  (Nicolás Ojeda Bär, review by Alain Frisch, Gabriel Scherer and Damien
  Doligez)

- #9486: Fix configuration for the Haiku operating system
  (Sylvain Kerjean, review by David Allsopp and Sébastien Hinderer)

### Internal/compiler-libs changes:

 - #463: a new Misc.Magic_number module for user-friendly parsing
   and validation of OCaml magic numbers.
   (Gabriel Scherer, review by Gabriel Radanne and Damien Doligez)

- #1176: encourage better compatibility with older Microsoft C compilers by
  using GCC's -Wdeclaration-after-statement when available. Introduce
  Caml_inline to stop abuse of the inline keyword on MSVC and to help ensure
  that only static inline is used in the codebase (erroneous instance in
  runtime/win32.c removed).
  (David Allsopp, review by Oliver Andrieu and Xavier Leroy)

- #8934: Stop relying on location to track usage
  (Thomas Refis, review by Gabriel Radanne)

- #8970: separate value patterns (matching on values) from computation patterns
  (matching on the effects of a copmutation) in the typedtree.
  (Gabriel Scherer, review by Jacques Garrigue and Alain Frisch)

- #9060: ensure that Misc.protect_refs preserves backtraces
  (Gabriel Scherer, review by Guillaume Munch-Maccagnoni and David Allsopp)

- #9021: expose compiler Longident.t parsers
  (Florian Angeletti, review by Gabriel Scherer)

- #9078: make all compilerlibs/ available to ocamltest.
  (Gabriel Scherer, review by Sébastien Hinderer)

- #9079: typecore/parmatch: refactor ppat_of_type and refine
  the use of backtracking on wildcard patterns
  (Florian Angeletti, Jacques Garrigue, Gabriel Scherer,
   review by Thomas Refis)

- #9081: typedtree, make the pat_env field of pattern data immutable
  (Gabriel Scherer, review by Jacques Garrigue, report by Alain Frisch)
